feat(webapp): filter transactions by account address
